--- a/style.css
+++ b/style.css
@@ -1,3 +1,49 @@
 body {
+body {
+  font-family: system-ui;
+  background: #e3d5ca;
+  color: white;
+  text-align: center;
+}
+h2 { 
+  color: #588157;
+  text-align: center;
+  text-shadow: 2px 2px 5px lightblue;
+  font-size: 30px;
+  }
 
+h5 {
+  color: #9090AF;
+  text-align: center;
+  font-size: 20px;
+}
+img {
+  width: 550px;
+}
+img:hover {
+  border: dashed blue 5px;
+  border-radius: 35%;
+}
+
+
+nav{
+  list-style-type: none;
+  background: lightblue;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  padding: 9px;
+}
+
+a{
+  color: white;
+  text-decorations: none;
+}
+
+li{
+  display: inline;
+  padding: 10px;
+  float: center;
+}
 }
